updated logic and css to fix cell misalignment issue

--- a/public/css/random-user.css
+++ b/public/css/random-user.css
@@ -86,5 +86,6 @@ label {
 }
 
 .cell {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  height: 310px;
 }
